# nao-ros4hri-bridge

./: .gitignore  .pre-commit-config.yaml  DockerFile  README.md  dependencies.repos  requirements-dev.txt
docker/: DockerFile  Dockerfile  Dockerfile.full  ros_entrypoint.sh
docker/keys/: socialminds.gpg
docs/: architecture_diagram.md  asr_vosk_setup.md  current_workflow.md  dialogue_manager_ros4hri_migration_plan.md  launch_profiles.md  nao_camera_vlm_research.md  node_interactions_map.md  ollama_chatbot_architecture.md  repo_runtime_audit.md  ros4hri_fork_delta_ledgers.md  ros4hri_skills_audit.md  whiteboard_migration_diagram.md
local_build/src/nao_chatbot/: package.xml  setup.py
local_build/src/nao_chatbot/launch/: nao_chatbot_stack.launch.py
local_build/src/nao_chatbot/nao_chatbot/: nao_rqt_bridge.py  ollama_node.py
scripts/: build_docker.sh  export_docker_image.sh  import_docker_image.sh  precommit_check_merge_conflict.py  precommit_check_yaml.py  precommit_fix_eof.py  precommit_trim_trailing_whitespace.py  run_precommit.sh  run_tests.sh  setup_dev_tools.sh
src/asr_vosk/: README.md  package.xml  setup.cfg  setup.py
src/asr_vosk/asr_vosk/: node_vosk.py
src/asr_vosk/config/: 00-defaults.yml
src/asr_vosk/launch/: asr_vosk.launch.py
src/asr_vosk/resource/: asr_vosk
src/asr_vosk/test/unit/: test_node_vosk_unit.py
src/communication_skills/: package.xml
src/communication_skills/action/: Chat.action
src/dialogue_manager/: CHANGELOG.rst  README.md  package.xml  setup.cfg  setup.py
src/dialogue_manager/config/: 00-defaults.yml
src/dialogue_manager/dialogue_manager/: chatbot_client.py  dialogue.py  manager_node.py  nao_asr_utils.py  nao_dialogue_manager.py  say_skill_client.py  skill_servers.py  speech_handler.py  start_manager.py  tts_client.py
src/dialogue_manager/launch/: dialogue_manager.launch.py
src/dialogue_manager/module/: dialogue_manager  dialogue_manager_module.yaml
src/dialogue_manager/test/: test_chatbot_client.py  test_dialogue.py  test_integration.py  test_manager_node.py  test_nao_asr_utils.py  test_nao_dialogue_manager_unit.py  test_skill_servers.py  test_speech_handler.py  test_tts_client.py
src/nao_chatbot/: README.md  package.xml  setup.cfg  setup.py
src/nao_chatbot/config/: chat_prompt_pack.yaml
src/nao_chatbot/launch/: nao_chatbot_asr_only.launch.py  nao_chatbot_legacy.launch.py  nao_chatbot_ros4hri_migration.launch.py  nao_chatbot_ros4hri_with_asr.launch.py  nao_chatbot_skills.launch.py  nao_chatbot_skills_asr.launch.py  nao_chatbot_stack.launch.py
src/nao_chatbot/module/: nao_chatbot  nao_chatbot_module.yaml
src/nao_chatbot/nao_chatbot/: asr_push_to_talk_cli.py  asr_utils.py  asr_vosk.py  chat_config.py  chat_goal_codec.py  chat_history.py  chat_prompts.py  chat_skill_client.py  chat_skill_server.py  chat_turn_engine.py  dialogue_manager.py  head_motion_skill_client.py  intent_rules.py  laptop_asr.py  mission_controller.py  nao_rqt_bridge.py  ollama_chatbot.py  ollama_node.py  ollama_responder.py  ollama_transport.py  posture_skill_client.py  prompt_pack.py  robot_speech_debug.py  say_skill_client.py  skill_catalog.py
src/nao_chatbot/test/unit/: test_asr_push_to_talk_cli.py  test_asr_utils.py  test_asr_vosk.py  test_chat_goal_codec.py  test_chat_history.py  test_chat_turn_engine.py  test_intent_rules.py  test_prompt_pack.py  test_skill_catalog.py
src/nao_look_at/: README.md  package.xml  setup.cfg  setup.py
src/nao_look_at/config/: 00-defaults.yml
src/nao_look_at/launch/: nao_look_at.launch.py
src/nao_look_at/module/: nao_look_at  nao_look_at_module.yaml
src/nao_look_at/nao_look_at/: skill_impl.py  start_skill.py
src/nao_look_at/test/: test_nao_look_at_unit.py
src/nao_orchestrator/: README.md  package.xml  setup.cfg  setup.py
src/nao_orchestrator/config/: 00-defaults.yml
src/nao_orchestrator/launch/: nao_orchestrator.launch.py
src/nao_orchestrator/module/: nao_orchestrator  nao_orchestrator_module.yaml
src/nao_orchestrator/nao_orchestrator/: intent_rules.py  orchestrator.py  run_app.py
src/nao_orchestrator/test/: test_nao_orchestrator_intent_rules.py
src/nao_posture_bridge/: CMakeLists.txt  package.xml
src/nao_posture_bridge/nao_posture_bridge/: posture_skill_server.py  say_skill_server.py  speech_skill_server.py
src/nao_posture_bridge/src/: nao_posture_bridge_node.cpp
src/nao_replay_motion/: CMakeLists.txt  README.md  package.xml
src/nao_replay_motion/launch/: nao_replay_motion.launch.py
src/nao_replay_motion/nao_replay_motion/: head_motion_skill_client.py  head_motion_skill_server.py  replay_motion_client.py  replay_motion_skill_server.py
src/nao_replay_motion/src/: nao_posture_bridge_node.cpp
src/nao_replay_motion/test/: test_nao_replay_motion_unit.py
src/nao_say_skill/: README.md  package.xml  setup.cfg  setup.py
src/nao_say_skill/config/: 00-defaults.yml  nao_say_skill
src/nao_say_skill/launch/: nao_say_skill.launch.py
src/nao_say_skill/module/: nao_say_skill  nao_say_skill_module.yaml
src/nao_say_skill/nao_say_skill/: skill_impl.py  start_skill.py
src/nao_say_skill/test/: test_nao_say_skill_unit.py
src/nao_skill_servers/: CMakeLists.txt  package.xml
src/nao_skill_servers/nao_skill_servers/: head_motion_skill_server.py  posture_skill_server.py
src/nao_skill_servers/src/: nao_posture_bridge_node.cpp
src/nao_skill_servers/test/unit/: test_skill_servers_unit.py
src/nao_skills/: CMakeLists.txt  package.xml
src/nao_skills/action/: Chat.action  DoHeadMotion.action  DoPosture.action  ReplayMotion.action  SayText.action
src/simple_audio_capture/: package.xml  setup.cfg  setup.py
src/simple_audio_capture/config/: speech_recognition.yaml
src/simple_audio_capture/launch/: audio_capture.launch.py
src/simple_audio_capture/resource/: simple_audio_capture
src/simple_audio_capture/simple_audio_capture/: __init__.py  audio_capture_node.py
src/simple_audio_capture/test/unit/: test_audio_capture_node_unit.py
