<?xml version="1.0"?>
<package format="3">
    <name>dialogue_manager</name>
    <version>0.3.1</version>
    <description>ROS4HRI-compatible dialogue manager</description>

  <maintainer email="severin.lemaignan@iiia.csic.es">Séverin Lemaignan</maintainer>
  <author email="severin.lemaignan@iiia.csic.es">Séverin Lemaignan</author>

  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>hri_msgs</depend>
  <depend>std_skills</depend>
  <depend>communication_skills</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_pal</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
      <build_type>ament_python</build_type>
      <architecture_independent />
  </export>
</package>
