<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nao_chatbot</name>
  <version>0.1.0</version>
  <description>ROS 2 chatbot orchestration and bridges for NAO + ROS4HRI.</description>
  <maintainer email="juanbeck@icloud.com">juanbeck</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>rcl_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>hri_msgs</depend>
  <depend>chatbot_msgs</depend>
  <depend>std_skills</depend>
  <depend>communication_skills</depend>
  <depend>tts_msgs</depend>
  <depend>nao_skills</depend>
  <depend>naoqi_bridge_msgs</depend>
  <depend>dialogue_manager</depend>
  <exec_depend>nao_skill_servers</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <implements type="skill" package="communication_skills" id="chat" />
  </export>
</package>
