<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nao_chatbot</name>
  <version>0.1.0</version>
  <description>Launch and operator-utility package for the NAO ROS4HRI migration stack.</description>
  <maintainer email="juanbeck@icloud.com">juanbeck</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>hri_actions_msgs</depend>
  <exec_depend>asr_vosk</exec_depend>
  <exec_depend>chatbot_llm</exec_depend>
  <exec_depend>dialogue_manager</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>naoqi_driver</exec_depend>
  <exec_depend>nao_look_at</exec_depend>
  <exec_depend>nao_orchestrator</exec_depend>
  <exec_depend>nao_replay_motion</exec_depend>
  <exec_depend>nao_say_skill</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>simple_audio_capture</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
