<?xml version="1.0"?>
<package format="3">
  <name>nao_orchestrator</name>
  <version>0.1.0</version>
  <description>Lifecycle NAO orchestrator for ROS4HRI intents and skill dispatch.</description>

  <maintainer email="juanbeck@icloud.com">juanbeck</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>lifecycle_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>launch_pal</depend>
  <depend>std_msgs</depend>
  <depend>hri_actions_msgs</depend>
  <depend>communication_skills</depend>
  <depend>interaction_skills</depend>
  <depend>nao_skills</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
