<?xml version="1.0"?>
<package format="3">
  <name>nao_posture_bridge</name>
  <version>0.1.0</version>
  <description>ROS 2 bridge from chatbot posture commands to NAOqi ALRobotPosture calls.</description>

  <maintainer email="juanbeck@icloud.com">juanbeck</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>naoqi_libqi</depend>
  <depend>nao_skills</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
