<?xml version="1.0"?>
<package format="3">
  <name>nao_skill_servers</name>
  <version>0.1.0</version>
  <description>ROS 2 execution servers and bridges for NAO posture, head motion, and speech.</description>

  <maintainer email="juanbeck@icloud.com">juanbeck</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>action_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_skills</depend>
  <depend>communication_skills</depend>
  <depend>tts_msgs</depend>
  <depend>naoqi_libqi</depend>
  <depend>naoqi_bridge_msgs</depend>
  <depend>nao_skills</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
