<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nao_skills</name>
  <version>0.1.0</version>
  <description>Interfaces for NAO skill actions.</description>
  <maintainer email="juanbeck@icloud.com">juanbeck</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>

    <skill content-type="yaml">
      id: replay_motion
      version: 1.0.0
      description: |
        Replay a named NAO motion primitive or posture-compatible motion.
        This is the canonical local entry point for posture-style robot motion
        execution during the ROS4HRI refactor.
      interface: action
      default_interface_path: /skill/replay_motion
      datatype: nao_skills/action/ReplayMotion
      functional_domains:
        - motions
      parameters:
        in:
          - name: motion_name
            type: string
            required: true
            description: |
              Named motion primitive to replay (for example: stand, sit,
              kneel, crouch, standinit).
          - name: speed
            type: float
            default: 0.8
            max: 1.0
            description: Execution speed in [0.0, 1.0].
        out:
          - name: success
            type: boolean
            description: True if the motion finished successfully.
          - name: message
            type: string
            description: Execution result message.
          - name: duration
            type: float
            description: Execution duration in seconds.
        feedback:
          - name: status
            type: string
            description: Execution phase (for example preparing/executing/completing).
          - name: progress
            type: float
            description: Progress value in [0.0, 1.0].
    </skill>

    <skill content-type="yaml">
      id: do_posture
      version: 1.0.0
      description: |
        Execute NAO robot posture changes (Stand, Sit, Crouch, StandInit).
      interface: action
      default_interface_path: /skill/do_posture
      datatype: nao_skills/action/DoPosture
      functional_domains:
        - motions
      parameters:
        in:
          - name: posture_name
            type: string
            required: true
            description: |
              Target posture name accepted by the posture implementation
              (for example: Stand, Sit, Crouch, StandInit).
          - name: speed
            type: float
            default: 0.8
            max: 1.0
            description: Posture transition speed in [0.0, 1.0].
        out:
          - name: success
            type: boolean
            description: True if posture request completed successfully.
          - name: message
            type: string
            description: Execution result message.
          - name: duration
            type: float
            description: Execution duration in seconds.
        feedback:
          - name: status
            type: string
            description: Execution phase (for example preparing/executing/completing).
          - name: progress
            type: float
            description: Progress value in [0.0, 1.0].
    </skill>

    <skill content-type="yaml">
      id: do_head_motion
      version: 1.0.0
      description: |
        Execute NAO head motion by commanding HeadYaw and HeadPitch targets.
        The skill supports absolute targets and relative increments.
      interface: action
      default_interface_path: /skill/do_head_motion
      datatype: nao_skills/action/DoHeadMotion
      functional_domains:
        - motions
      parameters:
        in:
          - name: yaw
            type: float
            required: true
            description: HeadYaw angle in radians.
          - name: pitch
            type: float
            required: true
            description: HeadPitch angle in radians.
          - name: speed
            type: float
            default: 0.2
            max: 1.0
            description: Joint speed fraction in [0.0, 1.0].
          - name: relative
            type: boolean
            default: false
            description: Whether yaw/pitch are interpreted as relative increments.
        out:
          - name: success
            type: boolean
            description: True if head motion request completed successfully.
          - name: message
            type: string
            description: Execution result message.
          - name: duration
            type: float
            description: Execution duration in seconds.
        feedback:
          - name: status
            type: string
            description: Execution phase (for example preparing/executing/completing).
          - name: progress
            type: float
            description: Progress value in [0.0, 1.0].
    </skill>

  </export>
</package>
