<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_audio_capture</name>
  <version>1.0.0</version>
  <description>Simple ROS 2 microphone capture node using GStreamer.</description>

  <maintainer email="juanbeck@icloud.com">juanbeck</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>audio_common_msgs</depend>

  <exec_depend>python3-gi</exec_depend>
  <exec_depend>gstreamer1.0-tools</exec_depend>
  <exec_depend>gstreamer1.0-alsa</exec_depend>
  <exec_depend>gstreamer1.0-pulseaudio</exec_depend>
  <exec_depend>gstreamer1.0-plugins-base</exec_depend>
  <exec_depend>gstreamer1.0-plugins-good</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
